apps/navidrome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: navidrome
  labels:
    app.kubernetes.io/name: navidrome
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: navidrome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: navidrome
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k8s-worker-2
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: navidrome
          image: deluan/navidrome:0.62.0@sha256:c4b5cb36a790b3eb63ca6a68bbe2fe149c2d7fa2e586f7a480e61db630e6664b
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
          ports:
            - name: http
              containerPort: 4533
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: music-nfs
              subPath: music
              mountPath: /music
              readOnly: true
            - name: lyrics-nfs
              mountPath: /music/_lyrics
              readOnly: false
            - name: navidrome-pvc
              mountPath: /data
            - name: tmp-dir
              mountPath: /tmp
      volumes:
        - name: music-nfs
          nfs:
            server: 192.168.20.12
            path: /mnt/ssd1/media
        - name: lyrics-nfs
          nfs:
            server: 192.168.20.12
            path: /mnt/ssd1/media/music/_lyrics
        - name: navidrome-pvc
          persistentVolumeClaim:
            claimName: navidrome-pvc
        - name: tmp-dir
          emptyDir: {}
